...
				app:errorEnabled="true"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/linkInputIcon">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/linkInput"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:textColor="@color/zerion_text_primary"
					android:textColorHint="@color/zerion_hint"
					android:imeOptions="flagNoPersonalizedLearning"
					android:privateImeOptions="nm"
					android:importantForAutofill="no"
					android:inputType="textUri|textNoSuggestions" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/pasteButton"
				style="@style/Zerion.Button.Text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/paste_button"
				app:icon="@drawable/ic_content_paste"
				app:iconPadding="8dp"
...
				app:layout_constraintTop_toBottomOf="@+id/pasteButton" />

		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/addButton"
		style="@style/Zerion.Button.Primary"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginBottom="16dp"
		android:enabled="false"
...
